--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
     "@mui/system": "^5.14.20",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-date-pickers": "^6.18.2",
     "@mui/x-date-pickers-pro": "^6.18.2",
     "@mui/x-license-pro": "^6.10.2",
